# libdocset

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README.md
data/: libdocset++.pc.in  libdocset.pc.in
debian/: changelog  control  copyright  libdocset++0-dev.install  libdocset++0.install  libdocset0-dev.install  libdocset0.install  postinst
examples/: docfile.c  docgrep.c  docgrep.cpp
src/: docset.c  docset.cpp  docset.h  docset.hpp  fuzzy_index.h  prop_parser.c  prop_parser.h  stringbuf.c  stringbuf.h  type_names.c  vector.c  vector.h
test/: test_type_names.c
